Entrega del examen completada

--- a/1erEV/EntregaExamen/about.html
+++ b/1erEV/EntregaExamen/about.html
@@ -4,17 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/estilos.css">
+    <title> About </title>
 </head>
 
 <header>
-    <title> </title>
+    <h1> Sobre mí </h1>
+    <h2> En esta página encontrarás información acerca del autor de la página </h2>
 </header>
 
 <body>
 
+    <p> Soy un estudiante apasionado por la tecnología y el desarrollo backend </p>
+
+    <h3 id="leyenda-lista"> Información Personal </h3>
+    <ol type="I">
+        <li> Nombre: Guillem Porta Ortuño </li>
+        <li> Edad: 19 Años </li>
+        <li> Gustos: Música, videojuegos, deporte </li>
+        <li> Altura: 175 cm </li>
+        <li> Ubicación: Comunidad Valenciana </li>
+    </ol>
+
+    <p> Página sobre programación web: <a href="https://es.wikipedia.org/wiki/HTML5" target="_blank" rel="noopener noreferrer">Wikipedia: HTML5</a> </p>
+
 </body>
 
 <footer>
+
+    <h4 id="seccion-menu"> Menú de navegación </h4>
+
+    <ol>
+        <li> <a href="index.html"> Página principal </a></li>
+        <li> <a href="galeria.html"> Galería </a></li>
+        <li> <a href="contacto.html"> Formulario Contacto </a></li>
+    </ol>
 
 </footer>
 
