--- a/1erEV/EntregaExamen/galeria.html
+++ b/1erEV/EntregaExamen/galeria.html
@@ -4,17 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/estilos.css">
+    <title> Galería </title>
 </head>
 
 <header>
-    <title> </title>
+    <h1> Galería de Imágenes </h1>
+    <h2> Descubre mis proyectos y trabajos realizados </h2>
 </header>
 
 <body>
 
+    <h3> Mis Trabajos </h3>
+    <p> Estas son 3 imágenes acerca de los gustos del autor </p>
+
+    <div id="galeria">
+        <img src="img/img1.png" alt="Diseño web responsivo - Portada del proyecto">
+        <img src="img/img2.png" alt="Interfaz de usuario moderna - Dashboard interactivo">
+        <img src="img/img3.png" alt="Galería de arte digital - Colección de trabajos">
+    </div>
+
 </body>
 
 <footer>
+
+    <h4 id="seccion-menu"> Menú de navegación </h4>
+
+    <ol>
+        <li> <a href="index.html"> Página principal </a></li>
+        <li> <a href="about.html"> Sobre el autor </a></li>
+        <li> <a href="contacto.html"> Formulario Contacto </a></li>
+    </ol>
 
 </footer>
 
