--- a/1erEV/EntregaExamen/index.html
+++ b/1erEV/EntregaExamen/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/estilos.css">
+    <title> Index </title>
 </head>
 
 <header>
-    <title> Index </title>
-
+    
     <h1> Entrega post examen</h1>
     <h2> Esta es la entrega post examen que sirve para realizar correctamente lo que tuvimos mal en el examen</h2>
-    <h3> Guillem Porta Ortuño</h3>
+    <h3 id="nombre-autor"> Guillem Porta Ortuño</h3>
 
     <h3> Secciones </h3>
     <ul>  
@@ -22,6 +22,10 @@
 </header>
 
 <body>
+
+    <p> En esta entrega voy a demostrar lo aprendido sobre programación web, aunque la imaginación para los textos no es lo mío voy a centrarme  en el backend </p>
+
+    <p> La página contiene una tabla de datos de clientes, un formulario de contacto funcional y una galería de imágenes. Todo esto demuestra el conocimiento de etiquetas HTML y buenas prácticas. </p>
 
     <h4 id="seccion-tablas"> Tablas </h4>
 
@@ -84,7 +88,7 @@
 
     <ol>
         <li> <a href="about.html"> Sobre el autor </a></li>
-        <li> <a href="galeria.html"> Galría </a></li>
+        <li> <a href="galeria.html"> Galería </a></li>
         <li> <a href="contacto.html"> Formulario Contacto </a></li>
     </ol>
 
