Ejercicios iniciales JS avanzados

--- a/1erEV/UD3/Entregas/Entrega6/index.html
+++ b/1erEV/UD3/Entregas/Entrega6/index.html
@@ -10,16 +10,20 @@
         <li>Menú 1</li>
         <li>Menú 2</li>
         <li>Menú 3</li>
-        <li>Menú 4</li>
+        <li>
+            Menú 4
+            <ul id="desplegable">
+            <li>SubMenú 4-1</li>
+            <li>SubMenú 4-2</li>
+            <li>SubMenú 4-3</li>
+            <li>SubMenú 4-4</li>
+            </ul>
+        </li>
         <li>Menú 5</li>
         <li>Menú 6</li>
     </ul>
-    <ul id="desplegable">
-        <li>SubMenú 4-1</li>
-        <li>SubMenú 4-2</li>
-        <li>SubMenú 4-3</li>
-        <li>SubMenú 4-4</li>
-    </ul>
+
+
 </body>
 
 </html>
