--- a/1erEV/UD3/Entregas/Entrega5/index.html
+++ b/1erEV/UD3/Entregas/Entrega5/index.html
@@ -63,7 +63,7 @@ Buscar &nbsp; <input name="busqueda" type="text">
 <div id="principal">
 <div class="articulo">
 <h2>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</h2>
-<img src="./css/imagen.png" alt="Imagen genérica">
+<img src="img/imagen.png" alt="Imagen genérica">
 <p>Nullam est lacus, suscipit ut, dapibus quis, condimentum ac, risus. Vivamus vestibulum, ipsum sollicitudin faucibus pharetra, dolor metus fringilla dui, vel aliquet pede diam tempor tortor.</p>
 <p>Vestibulum pulvinar urna et quam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam vel turpis vitae dui imperdiet laoreet. Quisque eget ipsum.</p>
 <p>Donec commodo, turpis vel venenatis sollicitudin, quam ante convallis justo, sed eleifend justo lectus quis sapien. Ut consequat libero eget est.</p>
@@ -71,7 +71,7 @@ Buscar &nbsp; <input name="busqueda" type="text">
 </div>
 <div class="articulo">
 <h2>Vivamus lobortis turpis ac ante fringilla faucibus</h2>
-<img src="./css/imagen.png" alt="Imagen genérica">
+<img src="img/imagen.png" alt="Imagen genérica">
 <p>Quisque eget ipsum. Donec commodo, turpis vel venenatis sollicitudin, quam ante convallis justo, sed eleifend justo lectus quis sapien. Ut consequat libero eget est.</p>
 <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam dictum hendrerit neque. Mauris id ligula non elit mattis semper. Fusce arcu ipsum, tempus eget, tincidunt at, imperdiet in, mi.</p>
 <p>Sed fermentum cursus dolor. Aenean a diam. Phasellus feugiat. Donec tempor dignissim sem.</p>
