--- a/2aEV/JavaScript/Ejercicios_Iniciales/Ejercicio4/Ejercicio4.html
+++ b/2aEV/JavaScript/Ejercicios_Iniciales/Ejercicio4/Ejercicio4.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <script src="/scripts/Ejercicio1.js"></script>
-    <title>Ejercicio1 JS</title>
+    <script src="scripts/Ejercicio4.js"></script>
+    <title>Ejercicio4 JS</title>
 
 </head>
 
 <body>
     <h1>Ejercicios iniciales JavaScript</h1>
-    <h2>Actividad 1</h2>
+    <h2>Actividad 4</h2>
 </body>
 
 </html>
