--- a/2aEV/JavaScript/Boletin1/Ejercicio8/Ejercicio8.html
+++ b/2aEV/JavaScript/Boletin1/Ejercicio8/Ejercicio8.html
@@ -3,25 +3,24 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Ejercicio 1</title>
+    <title>Ejercicio 8</title>
     
 </head>
 
 <header>
-    <h1>Ejercicio 1</h1>
+    <h1>Ejercicio 8</h1>
     <h2>Javascript</h2>
 </header>
 
 <body>
-    <p id="parrafo">
-        Texto original
-    </p>
-
     
+    <button id="boton">Incrementar</button>
+    <p id="contador">0</p>
+
 </body>
 
 <footer>
-<script src="script/Ejercicio1.js"></script>
+<script src="script/Ejercicio8.js"></script>
 </footer>
 
 </html>
