--- a/2aEV/JavaScript/Boletin2/Boletin2.html
+++ b/2aEV/JavaScript/Boletin2/Boletin2.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Boletin 2 JavaScript</title>
+    <link rel="stylesheet" href="style/Boletin2.css">
 </head>
 
 <header>
@@ -67,6 +68,20 @@
 
     <div id="ejercicio8">
         <h3>Ejercicio 8</h3>
+        <div id="aumentar">
+            <button id="cerrar_img">Cerrar</button>
+        </div>
+        <ul>
+           <li >
+            <img id="img1" src="img/1.png"width="300">
+           </li> 
+           <li >
+            <img id="img2" src="img/2.png"width="300" height="300">
+           </li>
+           <li >
+            <img id="img3" src="img/3.png"width="300">
+           </li>
+        </ul>
     </div>
 </body>
 
